added map draft

--- a/src/PerfomanceDemo/PerformanceDemo.csproj
+++ b/src/PerfomanceDemo/PerformanceDemo.csproj
@@ -27,4 +27,7 @@
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.1.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Map\Map.csproj" />
+	</ItemGroup>
 </Project>
