--- a/src/PerfomanceDemo/appsettings.json
+++ b/src/PerfomanceDemo/appsettings.json
@@ -1,7 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-       "Default": "Error"
+      "Default": "Error"
     }
+  },
+  "ConnectionStrings": {
+    "db": "Server=127.0.0.1;Database=demo;User Id=sa;Password=Terrasoft+"
   }
 }
