--- a/src/PerfomanceDemo/appsettings.json
+++ b/src/PerfomanceDemo/appsettings.json
@@ -5,6 +5,6 @@
     }
   },
   "ConnectionStrings": {
-    "db": "Server=127.0.0.1;Database=demo;User Id=sa;Password=Terrasoft+"
+    "db": "Server=127.0.0.1;Database=demo;User Id=sa;Password=Password+"
   }
 }
