--- a/src/PerfomanceDemo/log4net.config
+++ b/src/PerfomanceDemo/log4net.config
@@ -27,7 +27,7 @@
 	</appender>
 
 	<root>
-		<level value="WARN" />
+		<level value="INFO" />
 		<appender-ref ref="Console" />
 	</root>
 </log4net>
