--- a/src/PerfomanceDemo/PerformanceDemo.csproj
+++ b/src/PerfomanceDemo/PerformanceDemo.csproj
@@ -26,6 +26,7 @@
 		<PackageReference Include="Gelf4Net.AmqpAppender" Version="1.0.0.22" />
 		<PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.1.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Map\Map.csproj" />
